# spam-rs

./: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  compose.yml  job.nomad.hcl
.github/workflows/: ci.yml  deploy.yml
src/: error.rs  main.rs
src/legacy/: email.rs
templates/default/: html.hbs
templates/metaspexet/: html.hbs
