[package]
name = "spam-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
aws-config = "1.8.8"
aws-sdk-sesv2 = "1.100.0"
env_logger = "0.11.8"
handlebars = "6.3.2"
log = "0.4.28"
markdown = "1.0.0"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-actix-web = "0.1.2"
utoipa-redoc = "6.0.0"
